--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,8 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    monospace;  
+  
 }
 
 h4 {
@@ -38,9 +39,9 @@ h3 {
   line-height: 2rem;
   margin: 1rem 0rem;
   margin-right: 1rem;
-  
-
+  text-decoration: none;
 }
+
 a {
   color: rgb(56, 56, 56);
 
@@ -79,8 +80,61 @@ button:hover {
   background: linear-gradient(to right, #f27121, #e94057);
 }
 
+
+.label-flex {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox-large {
+  width: 20px;
+  height: 20px;
+  margin-left: 5px;
+}
+
 /* Error Message Styles */
 .error {
   color: red;
   margin-top: 0.5rem;
+}
+
+.re-container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  /* align-items: flex-start; */
+  /* justify-content: space-evenly; */
+  padding: 50px 0;
+}
+
+.re-container img{
+  width: 100%;
+  margin: 10px 0;
+  text-align: center;
+}
+
+.re-container h1{
+  margin: 20px 0;
+  text-align: center;
+
+}
+
+.re-container .p1{
+  background: linear-gradient(40deg, #494949, #313131);
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 4px;
+  margin: 10px 0;
+  width: fit-content;
+}
+
+.re-container .p3{
+  background: linear-gradient(40deg, #494949, #313131);
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 4px;
+  margin: 10px 0;
+  padding-bottom: 50px;
 }
